log
Wed 19 Apr 2023 02:37:36 AM UTC: 
 tests:  1|8
total_score: 0/70
e35ad30
Thu 20 Apr 2023 04:36:37 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:16: error: unused variable ‘current’ [-Werror=unused-variable]
   42 |     TreeNode * current = NULL;
      |                ^~~~~~~
treemap.c:41:16: error: unused variable ‘root’ [-Werror=unused-variable]
   41 |     TreeNode * root = NULL;
      |                ^~~~
cc1: all warnings being treated as errors
Compilation failed
d7528a1
Thu 20 Apr 2023 04:42:10 AM UTC: 
 treemap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:3: error: unknown type name ‘treeMap’; did you mean ‘TreeMap’?
   41 |   treeMap nuevoMapa;
      |   ^~~~~~~
      |   TreeMap
treemap.c:42:12: error: invalid type argument of ‘->’ (have ‘int’)
   42 |   nuevoMapa->root = NULL;
      |            ^~
treemap.c:43:12: error: invalid type argument of ‘->’ (have ‘int’)
   43 |   nuevoMapa->current = NULL;
      |            ^~
treemap.c:44:12: error: invalid type argument of ‘->’ (have ‘int’)
   44 |   nuevoMapa->lower_than = lower_than;
      |            ^~
Compilation failed
724b8d1
Thu 20 Apr 2023 04:42:17 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:3: error: unknown type name ‘treeMap’; did you mean ‘TreeMap’?
   41 |   treeMap nuevoMapa;
      |   ^~~~~~~
      |   TreeMap
treemap.c:42:12: error: invalid type argument of ‘->’ (have ‘int’)
   42 |   nuevoMapa->root = NULL;
      |            ^~
treemap.c:43:12: error: invalid type argument of ‘->’ (have ‘int’)
   43 |   nuevoMapa->current = NULL;
      |            ^~
treemap.c:44:12: error: invalid type argument of ‘->’ (have ‘int’)
   44 |   nuevoMapa->lower_than = lower_than;
      |            ^~
treemap.c:45:12: error: returning ‘int’ from a function with return type ‘TreeMap *’ makes pointer from integer without a cast [-Werror=int-conversion]
   45 |     return nuevoMapa;
      |            ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2ecd977
Thu 20 Apr 2023 04:42:33 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:12: error: invalid type argument of ‘->’ (have ‘TreeMap’)
   42 |   nuevoMapa->root = NULL;
      |            ^~
treemap.c:43:12: error: invalid type argument of ‘->’ (have ‘TreeMap’)
   43 |   nuevoMapa->current = NULL;
      |            ^~
treemap.c:44:12: error: invalid type argument of ‘->’ (have ‘TreeMap’)
   44 |   nuevoMapa->lower_than = lower_than;
      |            ^~
treemap.c:45:12: error: incompatible types when returning type ‘TreeMap’ but ‘TreeMap *’ was expected
   45 |     return nuevoMapa;
      |            ^~~~~~~~~
treemap.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
   46 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6cfd9b5
Thu 20 Apr 2023 04:44:29 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
0a933e8
